[regression] [bisected] Xorg graphics corrupted after suspend/resume cycle
After suspend/resume cycle, graphics in X are persistently corrupted/drawn incorrectly/wrong offsets (apart from at least cursor plane, which seems okay). This occurs on my ancient laptop with GeForce Go mobile GPU.
00:05.0 VGA compatible controller: NVIDIA Corporation C51 [GeForce Go 6150] (rev a2)
Kernel bisection points to this commit "drm/nouveau: slowpath for pushbuf ioctl" https://git.kernel.org/pub/scm/linux/kernel/git/tip/tip.git/commit/?id=03e0d26fcf791e48164ff7c280c71225c361a89e